# Stood-Task-Management

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
core/data/: CMakeLists.txt  build.gradle.kts
core/data/src/androidTest/java/one/reevdev/stood/core/data/: ExampleInstrumentedTest.kt
core/data/src/main/java/one/reevdev/stood/core/data/: StoodAuthenticator.kt
core/data/src/main/java/one/reevdev/stood/core/data/datasource/local/auth/: AuthDataStore.kt
core/data/src/main/java/one/reevdev/stood/core/data/datasource/local/datastore/: AuthPreferences.kt
core/data/src/main/java/one/reevdev/stood/core/data/datasource/remote/: ApiConfig.kt  AuthInterceptor.kt
core/data/src/main/java/one/reevdev/stood/core/data/di/: CommonModule.kt  DataModule.kt  DataStoreModule.kt  DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt
core/data/src/main/java/one/reevdev/stood/core/data/repository/: TaskRepository.kt
core/data/src/main/java/one/reevdev/stood/core/data/repository/auth/: AuthRepository.kt  IAuthRepository.kt
core/data/src/main/java/one/reevdev/stood/core/data/repository/task/: ITaskRepository.kt  TaskDataMapper.kt  TaskDatastore.kt  TaskRepository.kt
core/data/src/main/java/one/reevdev/stood/core/data/utils/: AppConstants.kt  AppExecutors.kt  Encryptor.kt  NetworkBoundResource.kt  Resource.kt  Utils.kt
core/data/src/main/java/one/reevdev/stood/core/data/utils/constants/: AppConstants.kt  DataStoreConstants.kt
core/data/src/main/jni/: native-lib.cpp
core/data/src/test/java/one/reevdev/stood/core/data/: ExampleUnitTest.kt
(+197 files in other folders)
